# foobaz

./: .env  INTEGRATION_INSTRUCTIONS.md  README.md  cli.py  coordinated_restore_planner.py  deploy_to_new_system.sh  env.example  fix_postgres_auth.sh  graph.py  install_consistency_groups.sh  linux_setup_fix.sh  mcp_http_server.py  pyproject.toml  requirements.txt  setup_postgres.sh  start_complete_system.sh  start_mcp_pg1.py  start_mcp_pg2.py  start_true_wal_system.py  test_linux_recommendation.py  test_recommendation_only.py  test_recommendation_prompts.sh  true_wal_incremental_backup.py
agents/: __init__.py  backup_agent_pg1.py  backup_agent_pg2.py
fastapi_backup_server/: backup_schedules.json  cg_diagnostic.py  check_tsm_files.py  consistency_group_manager.py  consistency_groups_config.json  examine_headers.sh  fix_cg_config.py  header_structures.txt  lakehouse.py  lakehouse_cli.py  lakehouse_ollama.py  lakehouse_orchestrator.py  minimal_api_test.py  orchestartor_main.py  parse_tsm_headers.py  python3-gpg-1.13.1-12.el8.x86_64.rpm  query  quick_pg_fix.sh  setup_sp_upload.sh  sp_config.sh  sp_upload  sp_upload.c  test_lakehouse.sh  test_tsm_api.py  tsm_backup.py  tsm_backup_diagnose.py  tsm_check_version.py  tsm_structure_tester.py  verify_tsm_native.py  verify_tsm_native1.py
langchain/: demo_restore_usage.py  env.example  main.py  pgbackrest_pitr_restore.sh  requirements.txt  setup.py
llm/: __init__.py  ollama_helper.py
mcp/: mcp_client.py  mcp_tools.py  server_config.json
mcp_local/: mcp_client.py  mcp_http_client.py  mcp_tools.py  postgres_backup_server.py  (+3 more)
(+2639 files in other folders)
